--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -309,6 +309,12 @@ libretro-build-windows-x64-x128:
   extends:
     - .libretro-windows-x64-mingw-make-default
     - .core-defs-x128
+   
+# Windows 32-bit
+libretro-build-windows-i686-x128:
+  extends:
+    - .libretro-windows-i686-mingw-make-default
+    - .core-defs-x128
 
 # Android
 android-armeabi-v7a-x128:
