--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -266,6 +266,12 @@ libretro-build-dingux-mips32:
     - .libretro-dingux-mips32-make-default
     - .core-defs
 
+# OpenDingux Beta
+libretro-build-dingux-odbeta-mips32:
+  extends:
+    - .libretro-dingux-odbeta-mips32-make-default
+    - .core-defs
+
 # PlayStation Vita
 libretro-build-vita:
   extends:
